--- a/pages/playing-field-details.html
+++ b/pages/playing-field-details.html
@@ -14,31 +14,31 @@
     <nav>
         <ul>
             <li><a href="">Strona główna</a></li>
-            <li><a href=""class="active">Gracze</a></li>
-            <li><a href="">Obiekty sportowe</a></li>
+            <li><a href="">Gracze</a></li>
+            <li><a href=""class="active">Obiekty sportowe</a></li>
             <li><a href="">Event</a></li>
         </ul>
     </nav>
     <main>
         <h2>Szczegóły gracza</h2>
         <div>
-            <label for="firstName">Imię:</label>
-            <input type="text" name="firstName" value="Jan" id="firstName" disabled/>
+            <label for="name">Nazwa:</label>
+            <input type="text" name="name" value="Orlik targówek 2" id="name" disabled/>
         </div>
         <div>
-            <label for="lastName">Nazwisko:</label>
-            <input type="text" name="lastName" value="Nowak" id="lastName" disabled/>
+            <label for="adress">Adres:</label>
+            <input type="text" name="adress" value="Ossowskiego 2" id="adress" disabled/>
         </div>
         <div>
-            <label for="email">E-mail:</label>
-            <input type="email" name="email" value="jan.nowak@gmail.com" id="email" disabled/>
+            <label for="cloakroom">Szatnia:</label>
+            <input type="text" name="cloakroom" value="true" id="cloakroom" disabled/>
         </div>
-        <a href="">Edytuj</a>  
+        <a href="">Edytuj</a> 
         <h2>Szczegóły eventów</h2>
         <table class="table-list">
             <thead>
                 <tr>
-                    <th>Nazwa obiektu</th>
+                    <th>Nazwisko gracza</th>
                     <th>Początek</th>
                     <th>Koniec</th>
                     <th>Ilość graczy</th>
@@ -46,22 +46,10 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Orlik targówek 2</td>
+                    <td>Nowak</td>
                     <td>2020-11-01 12:00</td>
                     <td>2020-11-01 14:00</td>
                     <td>10</td>
-                </tr>
-                <tr>
-                    <td>Hala sportowa praga pn</td>
-                    <td>2020-10-01 12:00</td>
-                    <td>2020-10-01 14:00</td>
-                    <td>12</td>
-                </tr>
-                <tr>
-                    <td>Hala sportowa praga pd</td>
-                    <td>2020-09-01 12:00</td>
-                    <td>2020-09-01 14:00</td>
-                    <td>8</td>
                 </tr>
                 
             </tbody>
