--- a/pages/playing-field-form.html
+++ b/pages/playing-field-form.html
@@ -14,25 +14,25 @@
     <nav>
         <ul>
             <li><a href="">Strona główna</a></li>
-            <li><a href=""class="active">Gracze</a></li>
-            <li><a href="">Obiekty sportowe</a></li>
+            <li><a href="">Gracze</a></li>
+            <li><a href=""class="active">Obiekty sportowe</a></li>
             <li><a href="">Event</a></li>
         </ul>
     </nav>
     <main>
-        <h2>Nowy gracz</h2>
+        <h2>Nowy obiekt sportowy</h2>
         <form>
             <div>
-                <label for="firstName">Imię:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="text" name="firstName" id="firstName" />
+                <label for="name">Nazwa:<abbr title="required" aria-label="required">*</abbr></label>
+                <input type="text" name="name" id="name" />
             </div>
             <div>
-                <label for="lastName">Nazwisko:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="text" name="lastName" id="lastName" />
+                <label for="adress">Adres:<abbr title="required" aria-label="required">*</abbr></label>
+                <input type="text" name="adress" id="adress" />
             </div>
             <div>
-                <label for="email">E-mail:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="email" name="email" id="email" />
+                <label for="cloackroom">Szatnia:<abbr title="required" aria-label="required">*</abbr></label>
+                <input type="text" name="cloackroom" id="cloackroom" />
             </div>
             <div>
                 <input type="submit" value="Dodaj" />
