--- a/pages/event.html
+++ b/pages/event.html
@@ -20,10 +20,10 @@
         </ul>
     </nav>
     <main>
-        
-        <p><a href="">Dodaj nowego uczestnika event</a></p>
-        <p><a href="">Szczegóły uczestnictwa</a></p>
-        
+        <form class="form">
+            <p><a href="" class="button-add">Dodaj nowego uczestnika event</a></p>
+            <p><a href="" class="list-actions-button-details">Szczegóły uczestnictwa</a></p>
+        </form>
     </main>
     <footer>
         Piotr, Wierzbicki, s9405
