--- a/pages/player-list.html
+++ b/pages/player-list.html
@@ -88,7 +88,9 @@
                 
             </tbody>
         </table>
-        <p><a href=""class="button-add">Dodaj nowego gracza</a></p>
+        <div class="form-buttons">
+            <p><a href=""class="button-add">Dodaj nowego gracza</a></p>
+        </div>
         
     </main>
     <footer>
