--- a/pages/playing-field-list.html
+++ b/pages/playing-field-list.html
@@ -88,7 +88,9 @@
                 
             </tbody>
         </table>
-        <p><a href="" class="button-add">Dodaj nowego obiekt sportowy</a></p>
+        <div class="form-buttons">
+            <p><a href="" class="button-add">Dodaj nowego obiekt sportowy</a></p>
+        </div>
         
     </main>
     <footer>
