--- a/pages/event-form.html
+++ b/pages/event-form.html
@@ -20,36 +20,38 @@
         </ul>
     </nav>
     <main>
-        <div>
-            <label for="player">Gracz:</label>
-            <select>
-                <option>Jan Nowak</option>
-                <option>Paweł Kowalski</option>
-            </select>
-        </div>
-        <div>
-            <label for="playing-field">Obiekt sportowy:</label>
-            <select>
-                <option>Hala sportowa praga pn</option>
-                <option>Orlik targówek 2</option>
-            </select>
-        </div>
-        <div>
-            <label for="begin-time">Początek:</label>
-            <input type="datetime-local" name="begin-time" id="begin-time"/>
-        </div>
-        <div>
-            <label for="end-time">Koniec:</label>
-            <input type="datetime-local" name="end-time" id="end-time"/>
-        </div>
-        <div>
-            <label for="max-number-pf-player">Ilość graczy:</label>
-            <input type="number" name="max-number-pf-player" id="max-number-pf-player"/>
-        </div>
-        <div>
-            <input type="submit" value="Dodaj" />
-            <a href="">Anuluj</a>    
-        </div> 
+        <form class="form">
+            <div class="form-group">
+                <label for="player">Gracz:<abbr title="required" aria-label="required">*</abbr></label>
+                <select>
+                    <option>Jan Nowak</option>
+                    <option>Paweł Kowalski</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="playing-field">Obiekt sportowy:<abbr title="required" aria-label="required">*</abbr></label>
+                <select>
+                    <option>Hala sportowa praga pn</option>
+                    <option>Orlik targówek 2</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="begin-time">Początek:<abbr title="required" aria-label="required">*</abbr></label>
+                <input type="datetime-local" name="begin-time" id="begin-time"/>
+            </div>
+            <div class="form-group">
+                <label for="end-time">Koniec:<abbr title="required" aria-label="required">*</abbr></label>
+                <input type="datetime-local" name="end-time" id="end-time"/>
+            </div>
+            <div class="form-group">
+                <label for="max-number-pf-player">Ilość graczy:<abbr title="required" aria-label="required">*</abbr></label>
+                <input type="number" name="max-number-pf-player" id="max-number-pf-player"/>
+            </div>
+            <div class="form-bottons">
+                <input type="submit" value="Dodaj" class="form-button-submit"/>
+                <a href="" class="form-button-cancel">Anuluj</a>    
+            </div> 
+        </form>
         
     </main>
     <footer>
