--- a/pages/playing-field-form.html
+++ b/pages/playing-field-form.html
@@ -21,22 +21,22 @@
     </nav>
     <main>
         <h2>Nowy obiekt sportowy</h2>
-        <form>
-            <div>
+        <form class="form">
+            <div class="form-group">
                 <label for="name">Nazwa:<abbr title="required" aria-label="required">*</abbr></label>
                 <input type="text" name="name" id="name" />
             </div>
-            <div>
+            <div class="form-group">
                 <label for="adress">Adres:<abbr title="required" aria-label="required">*</abbr></label>
                 <input type="text" name="adress" id="adress" />
             </div>
-            <div>
+            <div class="form-group">
                 <label for="cloackroom">Szatnia:<abbr title="required" aria-label="required">*</abbr></label>
                 <input type="text" name="cloackroom" id="cloackroom" />
             </div>
-            <div>
-                <input type="submit" value="Dodaj" />
-                <a href="">Anuluj</a>    
+            <div class="form-bottons">
+                <input type="submit" value="Dodaj" class="form-button-submit" />
+                <a href="" class="form-button-cancel">Anuluj</a>    
             </div> 
 
         </form>
