--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <link rel="stylesheet" href="css/style.css" />
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>DOSIR Warszawa</title>
 </head>
+
 <body>
     <header>
         <h1>DOSIR Warszawa</h1>
@@ -13,7 +15,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href=""class="active">Strona główna</a></li>
+            <li><a href="" class="active">Strona główna</a></li>
             <li><a href="">Gracze</a></li>
             <li><a href="">Obiekty sportowe</a></li>
             <li><a href="">Event</a></li>
@@ -21,11 +23,13 @@
     </nav>
     <main>
         <h2>Strona główna</h2>
-        <p>Witamy na stronie głównej DOSIR Warszawa. Dzięki niej możesz zarezerwować obiekt sportowy, jak również znaleść interesujące Cię wydarzenie i dołączyć do niego.</p>
+        <p>Witamy na stronie głównej DOSIR Warszawa. Dzięki niej możesz zarezerwować obiekt sportowy, jak również
+            znaleść interesujące Cię wydarzenie i dołączyć do niego.</p>
     </main>
     <footer>
         Piotr, Wierzbicki, s9405
     </footer>
-    
+
 </body>
+
 </html>
