--- a/pages/player-details.html
+++ b/pages/player-details.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <link rel="stylesheet" href="../css/style.css" />
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>DOSIR Warszawa</title>
 </head>
+
 <body>
     <header>
         <h1>DOSIR Warszawa</h1>
@@ -14,7 +16,7 @@
     <nav>
         <ul>
             <li><a href="">Strona główna</a></li>
-            <li><a href=""class="active">Gracze</a></li>
+            <li><a href="" class="active">Gracze</a></li>
             <li><a href="">Obiekty sportowe</a></li>
             <li><a href="">Event</a></li>
         </ul>
@@ -22,22 +24,20 @@
     <main>
         <h2>Szczegóły gracza</h2>
         <form class="form">
-            <div class="form-group">
-                <label for="firstName">Imię:</label>
-                <input type="text" name="firstName" value="Jan" id="firstName" disabled/>
-            </div>
-            <div class="form-group">
-                <label for="lastName">Nazwisko:</label>
-                <input type="text" name="lastName" value="Nowak" id="lastName" disabled/>
-            </div>
-            <div class="form-group">
-                <label for="email">E-mail:</label>
-                <input type="email" name="email" value="jan.nowak@gmail.com" id="email" disabled/>
-            </div>
+
+            <label for="firstName">Imię:</label>
+            <input type="text" name="firstName" value="Jan" id="firstName" disabled />
+
+            <label for="lastName">Nazwisko:</label>
+            <input type="text" name="lastName" value="Nowak" id="lastName" disabled />
+
+            <label for="email">E-mail:</label>
+            <input type="email" name="email" value="jan.nowak@gmail.com" id="email" disabled />
+
             <div class="form-buttons">
                 <a href="" class="list-actions-button-edit">Edytuj</a>
             </div>
-        </form>  
+        </form>
         <h2>Szczegóły eventów</h2>
         <table class="table-list">
             <thead>
@@ -67,16 +67,17 @@
                     <td>2020-09-01 14:00</td>
                     <td>8</td>
                 </tr>
-                
+
             </tbody>
         </table>
         <div class="form-buttons">
-            <a href="" class="list-actions-button-details">Powrót</a>    
-        </div> 
+            <a href="" class="list-actions-button-details">Powrót</a>
+        </div>
     </main>
     <footer>
         Piotr, Wierzbicki, s9405
     </footer>
-    
+
 </body>
+
 </html>
