--- a/pages/player-list.html
+++ b/pages/player-list.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <link rel="stylesheet" href="../css/style.css" />
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>DOSIR Warszawa</title>
 </head>
+
 <body>
     <header>
         <h1>DOSIR Warszawa</h1>
@@ -14,7 +16,7 @@
     <nav>
         <ul>
             <li><a href="">Strona główna</a></li>
-            <li><a href=""class="active">Gracze</a></li>
+            <li><a href="" class="active">Gracze</a></li>
             <li><a href="">Obiekty sportowe</a></li>
             <li><a href="">Event</a></li>
         </ul>
@@ -85,16 +87,17 @@
                         </ul>
                     </td>
                 </tr>
-                
+
             </tbody>
         </table>
         <div class="form-buttons">
-            <p><a href=""class="button-add">Dodaj nowego gracza</a></p>
+            <p><a href="" class="button-add">Dodaj nowego gracza</a></p>
         </div>
-        
+
     </main>
     <footer>
         Piotr, Wierzbicki, s9405
-    </footer>    
+    </footer>
 </body>
+
 </html>
