--- a/pages/playing-field-details.html
+++ b/pages/playing-field-details.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <link rel="stylesheet" href="../css/style.css" />
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>DOSIR Warszawa</title>
 </head>
+
 <body>
     <header>
         <h1>DOSIR Warszawa</h1>
@@ -15,27 +17,25 @@
         <ul>
             <li><a href="">Strona główna</a></li>
             <li><a href="">Gracze</a></li>
-            <li><a href=""class="active">Obiekty sportowe</a></li>
+            <li><a href="" class="active">Obiekty sportowe</a></li>
             <li><a href="">Event</a></li>
         </ul>
     </nav>
     <main>
         <h2>Szczegóły obiektu sportowego</h2>
         <form class="form">
-            <div class="form-group">
-                <label for="name">Nazwa:</label>
-                <input type="text" name="name" value="Orlik targówek 2" id="name" disabled/>
-            </div>
-            <div class="form-group">
-                <label for="adress">Adres:</label>
-                <input type="text" name="adress" value="Ossowskiego 2" id="adress" disabled/>
-            </div>
-            <div class="form-group">
-                <label for="cloakroom">Szatnia:</label>
-                <input type="text" name="cloakroom" value="true" id="cloakroom" disabled/>
-            </div>
+
+            <label for="name">Nazwa:</label>
+            <input type="text" name="name" value="Orlik targówek 2" id="name" disabled />
+
+            <label for="adress">Adres:</label>
+            <input type="text" name="adress" value="Ossowskiego 2" id="adress" disabled />
+
+            <label for="cloakroom">Szatnia:</label>
+            <input type="text" name="cloakroom" value="true" id="cloakroom" disabled />
+
             <div class="form-buttons">
-                <a href="" class="list-actions-button-edit">Edytuj</a> 
+                <a href="" class="list-actions-button-edit">Edytuj</a>
             </div>
         </form>
         <h2>Szczegóły eventów</h2>
@@ -55,16 +55,17 @@
                     <td>2020-11-01 14:00</td>
                     <td>10</td>
                 </tr>
-                
+
             </tbody>
         </table>
         <div class="form-buttons">
-            <a href="" class="list-actions-button-details">Powrót</a>    
-        </div> 
+            <a href="" class="list-actions-button-details">Powrót</a>
+        </div>
     </main>
     <footer>
         Piotr, Wierzbicki, s9405
     </footer>
-    
+
 </body>
+
 </html>
