--- a/pages/playing-field-form.html
+++ b/pages/playing-field-form.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <link rel="stylesheet" href="../css/style.css" />
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>DOSIR Warszawa</title>
 </head>
+
 <body>
     <header>
         <h1>DOSIR Warszawa</h1>
@@ -15,36 +17,36 @@
         <ul>
             <li><a href="">Strona główna</a></li>
             <li><a href="">Gracze</a></li>
-            <li><a href=""class="active">Obiekty sportowe</a></li>
+            <li><a href="" class="active">Obiekty sportowe</a></li>
             <li><a href="">Event</a></li>
         </ul>
     </nav>
     <main>
         <h2>Nowy obiekt sportowy</h2>
         <form class="form">
-            <div class="form-group">
-                <label for="name">Nazwa:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="text" name="name" id="name" />
-            </div>
-            <div class="form-group">
-                <label for="adress">Adres:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="text" name="adress" id="adress" />
-            </div>
-            <div class="form-group">
-                <label for="cloackroom">Szatnia:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="text" name="cloackroom" id="cloackroom" />
-            </div>
-            <div class="form-bottons">
+
+            <label for="name">Nazwa:<abbr title="required" aria-label="required">*</abbr></label>
+            <input type="text" name="name" id="name" />
+
+            <label for="adress">Adres:<abbr title="required" aria-label="required">*</abbr></label>
+            <input type="text" name="adress" id="adress" />
+
+
+            <label for="cloackroom">Szatnia:<abbr title="required" aria-label="required">*</abbr></label>
+            <input type="text" name="cloackroom" id="cloackroom" />
+
+            <div class="form-buttons">
                 <input type="submit" value="Dodaj" class="form-button-submit" />
-                <a href="" class="form-button-cancel">Anuluj</a>    
-            </div> 
+                <a href="" class="form-button-cancel">Anuluj</a>
+            </div>
 
         </form>
-        
+
     </main>
     <footer>
         Piotr, Wierzbicki, s9405
     </footer>
-    
+
 </body>
+
 </html>
