--- a/pages/playing-field-list.html
+++ b/pages/playing-field-list.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <link rel="stylesheet" href="../css/style.css" />
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>DOSIR Warszawa</title>
 </head>
+
 <body>
     <header>
         <h1>DOSIR Warszawa</h1>
@@ -15,7 +17,7 @@
         <ul>
             <li><a href="">Strona główna</a></li>
             <li><a href="">Gracze</a></li>
-            <li><a href=""class="active">Obiekty sportowe</a></li>
+            <li><a href="" class="active">Obiekty sportowe</a></li>
             <li><a href="">Event</a></li>
         </ul>
     </nav>
@@ -44,7 +46,7 @@
                                 <a href="" class="list-actions-button-edit">Edytuj</a>
                             </li>
                             <li>
-                                <a href=""  class="list-actions-button-delete">Usuń</a>
+                                <a href="" class="list-actions-button-delete">Usuń</a>
                             </li>
                         </ul>
                     </td>
@@ -85,16 +87,17 @@
                         </ul>
                     </td>
                 </tr>
-                
+
             </tbody>
         </table>
         <div class="form-buttons">
             <p><a href="" class="button-add">Dodaj nowego obiekt sportowy</a></p>
         </div>
-        
+
     </main>
     <footer>
         Piotr, Wierzbicki, s9405
-    </footer>    
+    </footer>
 </body>
+
 </html>
