--- a/pages/event-form.html
+++ b/pages/event-form.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="../css/style.css" />
 <html lang="pl-PL">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>DOSIR Warszawa</title>
 </head>
+
 <body>
     <header>
         <h1>DOSIR Warszawa</h1>
@@ -16,46 +18,43 @@
             <li><a href="">Strona główna</a></li>
             <li><a href="">Gracze</a></li>
             <li><a href="">Obiekty sportowe</a></li>
-            <li><a href=""class="active">Event</a></li>
+            <li><a href="" class="active">Event</a></li>
         </ul>
     </nav>
     <main>
         <form class="form">
-            <div class="form-group">
-                <label for="player">Gracz:<abbr title="required" aria-label="required">*</abbr></label>
-                <select>
-                    <option>Jan Nowak</option>
-                    <option>Paweł Kowalski</option>
-                </select>
+
+            <label for="player">Gracz:<abbr title="required" aria-label="required">*</abbr></label>
+            <select>
+                <option>Jan Nowak</option>
+                <option>Paweł Kowalski</option>
+            </select>
+
+            <label for="playing-field">Obiekt sportowy:<abbr title="required" aria-label="required">*</abbr></label>
+            <select>
+                <option>Hala sportowa praga pn</option>
+                <option>Orlik targówek 2</option>
+            </select>
+
+            <label for="begin-time">Początek:<abbr title="required" aria-label="required">*</abbr></label>
+            <input type="datetime-local" name="begin-time" id="begin-time" />
+
+            <label for="end-time">Koniec:<abbr title="required" aria-label="required">*</abbr></label>
+            <input type="datetime-local" name="end-time" id="end-time" />
+
+            <label for="max-number-pf-player">Ilość graczy:<abbr title="required" aria-label="required">*</abbr></label>
+            <input type="number" name="max-number-pf-player" id="max-number-pf-player" />
+
+            <div class="form-buttons">
+                <input type="submit" value="Dodaj" class="form-button-submit" />
+                <a href="" class="form-button-cancel">Anuluj</a>
             </div>
-            <div class="form-group">
-                <label for="playing-field">Obiekt sportowy:<abbr title="required" aria-label="required">*</abbr></label>
-                <select>
-                    <option>Hala sportowa praga pn</option>
-                    <option>Orlik targówek 2</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="begin-time">Początek:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="datetime-local" name="begin-time" id="begin-time"/>
-            </div>
-            <div class="form-group">
-                <label for="end-time">Koniec:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="datetime-local" name="end-time" id="end-time"/>
-            </div>
-            <div class="form-group">
-                <label for="max-number-pf-player">Ilość graczy:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="number" name="max-number-pf-player" id="max-number-pf-player"/>
-            </div>
-            <div class="form-bottons">
-                <input type="submit" value="Dodaj" class="form-button-submit"/>
-                <a href="" class="form-button-cancel">Anuluj</a>    
-            </div> 
         </form>
-        
+
     </main>
     <footer>
         Piotr, Wierzbicki, s9405
-    </footer>    
+    </footer>
 </body>
+
 </html>
