--- a/pages/event.html
+++ b/pages/event.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <link rel="stylesheet" href="../css/style.css" />
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>DOSIR Warszawa</title>
 </head>
+
 <body>
     <header>
         <h1>DOSIR Warszawa</h1>
@@ -16,17 +18,18 @@
             <li><a href="">Strona główna</a></li>
             <li><a href="">Gracze</a></li>
             <li><a href="">Obiekty sportowe</a></li>
-            <li><a href=""class="active">Event</a></li>
+            <li><a href="" class="active">Event</a></li>
         </ul>
     </nav>
     <main>
-        <form class="form">
-            <p><a href="" class="button-add">Dodaj nowego uczestnika event</a></p>
-            <p><a href="" class="list-actions-button-details">Szczegóły uczestnictwa</a></p>
-        </form>
+
+        <p><a href="" class="button-add">Dodaj nowego uczestnika event</a></p>
+        <p><a href="" class="list-actions-button-details">Szczegóły uczestnictwa</a></p>
+
     </main>
     <footer>
         Piotr, Wierzbicki, s9405
-    </footer>    
+    </footer>
 </body>
+
 </html>
