--- a/pages/player-form.html
+++ b/pages/player-form.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <link rel="stylesheet" href="../css/style.css" />
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>DOSIR Warszawa</title>
 </head>
+
 <body>
     <header>
         <h1>DOSIR Warszawa</h1>
@@ -14,7 +16,7 @@
     <nav>
         <ul>
             <li><a href="">Strona główna</a></li>
-            <li><a href=""class="active">Gracze</a></li>
+            <li><a href="" class="active">Gracze</a></li>
             <li><a href="">Obiekty sportowe</a></li>
             <li><a href="">Event</a></li>
         </ul>
@@ -22,29 +24,28 @@
     <main>
         <h2>Nowy gracz</h2>
         <form class="form">
-            <div class="form-group">
-                <label for="firstName">Imię:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="text" name="firstName" id="firstName" />
+
+            <label for="firstName">Imię:<abbr title="required" aria-label="required">*</abbr></label>
+            <input type="text" name="firstName" id="firstName" />
+
+            <label for="lastName">Nazwisko:<abbr title="required" aria-label="required">*</abbr></label>
+            <input type="text" name="lastName" id="lastName" />
+
+            <label for="email">E-mail:<abbr title="required" aria-label="required">*</abbr></label>
+            <input type="email" name="email" id="email" />
+
+            <div class="form-buttons">
+                <input type="submit" value="Dodaj" class="form-button-submit" />
+                <a href="" class="form-button-cancel">Anuluj</a>
             </div>
-            <div class="form-group">
-                <label for="lastName">Nazwisko:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="text" name="lastName" id="lastName" />
-            </div>
-            <div class="form-group">
-                <label for="email">E-mail:<abbr title="required" aria-label="required">*</abbr></label>
-                <input type="email" name="email" id="email" />
-            </div>
-            <div class="form-bottons">
-                <input type="submit" value="Dodaj" class="form-button-submit"/>
-                <a href="" class="form-button-cancel">Anuluj</a>    
-            </div> 
 
         </form>
-        
+
     </main>
     <footer>
         Piotr, Wierzbicki, s9405
     </footer>
-    
+
 </body>
+
 </html>
