--- a/pages/event-form.html
+++ b/pages/event-form.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <script type="application/javascript" src="../js/validationCommon.js"></script>
+    <script type="application/javascript" src="../js/validationEventForm.js"></script>
     <title>DOSIR Warszawa</title>
 </head>
 
@@ -22,30 +24,36 @@
         </ul>
     </nav>
     <main>
-        <form class="form">
+        <form class="form"  novalidate onsubmit="return validateForm()">
 
             <label for="player">Gracz:<abbr title="required" aria-label="required">*</abbr></label>
-            <select>
+            <select id="player">
                 <option>Jan Nowak</option>
                 <option>Paweł Kowalski</option>
             </select>
+            <span id="errorPlayer" class="errors-text"></span>
 
             <label for="playing-field">Obiekt sportowy:<abbr title="required" aria-label="required">*</abbr></label>
-            <select>
+            <select id="playingField">
                 <option>Hala sportowa praga pn</option>
                 <option>Orlik targówek 2</option>
             </select>
+            <span id="errorPlayingField" class="errors-text"></span>
 
             <label for="begin-time">Początek:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="datetime-local" name="begin-time" id="begin-time" />
+            <input type="datetime-local" name="begin-time" id="beginTime" />
+            <span id="errorBeginTime" class="errors-text"></span>
 
             <label for="end-time">Koniec:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="datetime-local" name="end-time" id="end-time" />
+            <input type="datetime-local" name="end-time" id="endTime" />
+            <span id="errorEndTime" class="errors-text"></span>
 
-            <label for="max-number-pf-player">Ilość graczy:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="number" name="max-number-pf-player" id="max-number-pf-player" />
+            <label for="max-number-of-player">Ilość graczy:<abbr title="required" aria-label="required">*</abbr></label>
+            <input type="number" name="max-number-of-player" id="MaxNumberOfPlayer" />
+            <span id="errorMaxNumberOfPlayer" class="errors-text"></span>
 
             <div class="form-buttons">
+                <p id="errorsSummary" class="errors-text"></p>
                 <input type="submit" value="Dodaj" class="form-button-submit" />
                 <a href="" class="form-button-cancel">Anuluj</a>
             </div>
