--- a/pages/player-form.html
+++ b/pages/player-form.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <script type="application/javascript" src="../js/validationCommon.js"></script>
+    <script type="application/javascript" src="../js/validationPlayerForm.js"></script>
     <title>DOSIR Warszawa</title>
 </head>
 
@@ -23,18 +25,22 @@
     </nav>
     <main>
         <h2>Nowy gracz</h2>
-        <form class="form">
-
+        <form class="form" novalidate onsubmit="return validateForm()">
+            
             <label for="firstName">Imię:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="text" name="firstName" id="firstName" />
+            <input type="text" name="firstName" id="firstName" placeholder="2-20 znaków"/>
+            <span id="errorFirstName" class="errors-text"></span>
 
             <label for="lastName">Nazwisko:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="text" name="lastName" id="lastName" />
+            <input type="text" name="lastName" id="lastName" placeholder="2-20 znaków"/>
+            <span id="errorLastName" class="errors-text"></span>
 
             <label for="email">E-mail:<abbr title="required" aria-label="required">*</abbr></label>
-            <input type="email" name="email" id="email" />
+            <input type="email" name="email" id="email" placeholder="np. nazwa@domena.pl" />
+            <span id="errorEmail" class="errors-text"></span>
 
             <div class="form-buttons">
+                <p id="errorsSummary" class="errors-text"></p>
                 <input type="submit" value="Dodaj" class="form-button-submit" />
                 <a href="" class="form-button-cancel">Anuluj</a>
             </div>
