--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <script type="application/javascript" src="js/validationCommon.js"></script>
     <title>DOSIR Warszawa</title>
 </head>
 
